--- a/2023/homeworks/homework_1.ipynb
+++ b/2023/homeworks/homework_1.ipynb
@@ -8,10 +8,10 @@
    },
    "source": [
     "# Homework 1\n",
-    "This homework consists of three parts, each of which is rated at 10 points:\n",
-    "* Numpy (10 points)\n",
-    "* Matplotlib (10 points)\n",
-    "* Linear Regression (10 points)\n",
+    "This homework consists of three parts:\n",
+    "* Numpy (2.5 points)\n",
+    "* Matplotlib (4.0 points)\n",
+    "* Linear Regression (3.5 points)\n",
     "\n",
     "The score for each task is described in the comments before the task.\n",
     "\n",
@@ -60,7 +60,7 @@
     "id": "cDsKeK4EaWrE"
    },
    "source": [
-    "### Task 1 (1 point)"
+    "### Task 1 (0.25 points)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 1 (1 point)\n",
+    "# task 1 (0.25 points)\n",
     "\n",
     "\"\"\"\n",
     "description: finds the maximum element in the vector among the elements preceded by zero\n",
@@ -129,7 +129,7 @@
     "id": "GFHuDZoSacPG"
    },
    "source": [
-    "### Task 2 (1 point)"
+    "### Task 2 (0.25 points)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 2 (1 point)\n",
+    "# task 2 (0.25 points)\n",
     "\n",
     "\"\"\"\n",
     "description: given an image (height, width, numChannels) and weights (numChannels)\n",
@@ -205,7 +205,7 @@
     "id": "zT54XZpBaeHX"
    },
    "source": [
-    "### Task 3 (2 points)"
+    "### Task 3 (0.5 points)"
    ]
   },
   {
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 3 (2 points)\n",
+    "# task 3 (0.5 points)\n",
     "\n",
     "\"\"\"\n",
     "description: makes up a block matrix of four\n",
@@ -280,7 +280,7 @@
     "id": "dzvsvRm6apVb"
    },
    "source": [
-    "### Task 4 (2 points)"
+    "### Task 4 (0.5 points)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 4 (2 points)\n",
+    "# task 4 (0.5 points)\n",
     "\n",
     "\"\"\"\n",
     "description: calculates the product of all\n",
@@ -352,7 +352,7 @@
     "id": "1U5HMX3Marze"
    },
    "source": [
-    "### Task 5 (2 points)"
+    "### Task 5 (0.5 points)"
    ]
   },
   {
@@ -374,7 +374,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 5 (2 points)\n",
+    "# task 5 (0.5 points)\n",
     "\n",
     "\"\"\"\n",
     "description: this class implements StandardScaler from the sklearn library\n",
@@ -435,7 +435,7 @@
     "id": "VgfO8yt7atav"
    },
    "source": [
-    "### Task 6 (2 points)"
+    "### Task 6 (0.5 points)"
    ]
   },
   {
@@ -457,7 +457,7 @@
    },
    "outputs": [],
    "source": [
-    "# task 6 (2 points)\n",
+    "# task 6 (0.5 points)\n",
     "\n",
     "\"\"\"\n",
     "description: calculates the antiderivative polynomial (take 42 as a constant)\n",
@@ -550,7 +550,7 @@
     "id": "0fb7aaa9"
    },
    "source": [
-    "### Task 1 (5 points)\n",
+    "### Task 1 (2.0 points)\n",
     "Generate a Gaussian vector of dimension 2 from 100 points (choose mu and sigma on your choice). Check [the three sigma rule](https://en.wikipedia.org/wiki/68-95-99.7_rule): draw a circle centered in mu with a radius such that 0.99 of all points fall there, also draw a circle with a radius of 3 sigma. Draw a point mu in a separate color.\n",
     "\n",
     "Use subplot to draw histograms with 10 buckets for each dimension and draw a density graph along the histogram."
@@ -585,7 +585,7 @@
     "id": "b6414734"
    },
    "source": [
-    "### Task 2 (5 points)"
+    "### Task 2 (2.0 points)"
    ]
   },
   {
@@ -704,7 +704,7 @@
     "id": "HVRTISN3a4YC"
    },
    "source": [
-    "### Task 1 (2 points)"
+    "### Task 1 (0.5 points)"
    ]
   },
   {
@@ -714,7 +714,7 @@
     "id": "c4a9afae"
    },
    "source": [
-    "Plot the dependence of the target on the features and distributions of features, correlations and and everything that you think is important **(2 points)**"
+    "Plot the dependence of the target on the features and distributions of features, correlations and and everything that you think is important **(0.5 points)**"
    ]
   },
   {
@@ -746,7 +746,7 @@
     "id": "Rb7mNapVa9Ej"
    },
    "source": [
-    "### Task 2 (2 points)"
+    "### Task 2 (0.5 points)"
    ]
   },
   {
@@ -756,7 +756,7 @@
     "id": "1fd410c3"
    },
    "source": [
-    "Implement a linear regression class, normalize features if needed and fit model **(2 points)**"
+    "Implement a linear regression class, normalize features if needed and fit model **(0.5 points)**"
    ]
   },
   {
@@ -793,7 +793,7 @@
     "id": "1k_ftlY1a_1c"
    },
    "source": [
-    "### Task 3 (3 points)"
+    "### Task 3 (1.0 points)"
    ]
   },
   {
@@ -803,7 +803,7 @@
     "id": "e1912068"
    },
    "source": [
-    "Try to come up with a way to understand which feature contributes more to your model **(3 points)**"
+    "Try to come up with a way to understand which feature contributes more to your model **(1.0 points)**"
    ]
   },
   {
@@ -835,7 +835,7 @@
     "id": "moaPKZBubCO0"
    },
    "source": [
-    "### Task 4 (1 point)"
+    "### Task 4 (0.5 points)"
    ]
   },
   {
@@ -845,7 +845,7 @@
     "id": "6535441d"
    },
    "source": [
-    "Plot the dependence on the size of the training sample and the mse score **(1 point)**"
+    "Plot the dependence on the size of the training sample and the mse score **(0.5 points)**"
    ]
   },
   {
@@ -877,7 +877,7 @@
     "id": "8sunt01LbFL_"
    },
    "source": [
-    "### Task 5 (1 point)"
+    "### Task 5 (0.5 points)"
    ]
   },
   {
@@ -887,7 +887,7 @@
     "id": "39da2a8d"
    },
    "source": [
-    "Fit LinearRegression model from sklearn. Try to get the minimum MSE score as possible. Compare results with your model **(1 point)**"
+    "Fit LinearRegression model from sklearn. Try to get the minimum MSE score as possible. Compare results with your model **(0.5 points)**"
    ]
   },
   {
@@ -919,7 +919,7 @@
     "id": "GG8fUhiAbHve"
    },
    "source": [
-    "### Task 6 (1 point)"
+    "### Task 6 (0.5 points)"
    ]
   },
   {
@@ -929,7 +929,7 @@
     "id": "89a0feaa"
    },
    "source": [
-    "Describe the challenges you had to face :) **(1 point)**"
+    "Describe the challenges you had to face :) **(0.5 points)**"
    ]
   },
   {
