--- a/2023/homeworks/homework_3.ipynb
+++ b/2023/homeworks/homework_3.ipynb
@@ -198,7 +198,7 @@
     "Далее предполагается, что вы используете собственную реализацию логистической регрессии.\n",
     "Если с написанием класса возникли проблемы, используйте реализацию sklearn, чтобы не терять баллы за остальные задания.\n",
     "\n",
-    "Далее мы бы всем советовали использовать реализацию sklearn."
+    "Далее мы бы всем советовали использовать готовые реализации методов из sklearn."
    ]
   },
   {
