hw3 add logger equations

--- a/2024/homeworks/homework_3.ipynb
+++ b/2024/homeworks/homework_3.ipynb
@@ -65,11 +65,42 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Логистическая регрессия"
+      ],
+      "metadata": {
+        "id": "XXq13gt_fYsd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Модель логистической регрессии:\n",
+        "  $$\n",
+        "  \\hat y = \\sigma (Xw).\n",
+        "  $$\n",
+        "  Сигмоида меняется в пределах от 0 до 1 и имеет вид:\n",
+        "  $$\n",
+        "  \\sigma(x) = \\frac{1}{1+e^{-x}}.\n",
+        "  $$\n",
+        "\n",
+        "  Функция потерь log-loss:\n",
+        "  $$\n",
+        "  L = -\\frac{1}{\\ell}\\sum_{i = 1}^{\\ell}(y_i\\log(\\hat y_i) + (1 - y_i)\\log(1 - \\hat y_i)),\n",
+        "  $$\n",
+        "  где $\\ell$ - количество объектов."
+      ],
+      "metadata": {
+        "id": "kUH3O5v1fe5j"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "CPJLWbN2qRjM"
       },
       "source": [
-        "## Часть 1. Логрег своими руками (5.5 балла)"
+        "## Часть 1. Логрег своими руками"
       ]
     },
     {
@@ -78,7 +109,7 @@
         "id": "2wlZ_DDFqRjN"
       },
       "source": [
-        "**Задание 1 (8 баллов)**. Реализуйте логистическую регрессию для задачи бинарной классификации, обучаемую с помощью:\n",
+        "**Задание 1 (8 баллов)**. Реализуйте логистическую регрессию, обучаемую с помощью:\n",
         "- градиентного спуска **(4 балла)**\n",
         "\n",
         "- стохастического градиентного спуска **(4 балла)**\n",
