hw3 add gd reminder

--- a/2024/homeworks/homework_3.ipynb
+++ b/2024/homeworks/homework_3.ipynb
@@ -96,6 +96,28 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Градиентный спуск"
+      ],
+      "metadata": {
+        "id": "kSGOXy37jhPv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Итеративный метод оптимизации, при котором вектор весов модели $\\mathbf{w}^{(t+1)}$ на шаге $t+1$ может быть выражен как:\n",
+        "$$\n",
+        "\\mathbf{w}^{(t+1)} = \\mathbf{w}^{(t)} - \\eta_t \\nabla L(\\mathbf{w}^{(t)}),\n",
+        "$$\n",
+        "где $\\eta_t$ - шаг обучения."
+      ],
+      "metadata": {
+        "id": "kjjcRO7hjl5V"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "CPJLWbN2qRjM"
       },
