upd picture download link

--- a/2024/seminars/seminar13/sem13_cnn_solution.ipynb
+++ b/2024/seminars/seminar13/sem13_cnn_solution.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# при работе в колабе, скачайте изображение этой командой\n",
-    "# !wget https://raw.githubusercontent.com/hushchyn-mikhail/CourseraDL/main/cnn/screencast_1/butterfly.jpg"
+    "# !wget -O butterfly.jpg https://www.dropbox.com/scl/fi/444zy0ovp3t5w69aygt80/butterfly.jpg?rlkey=q6hfearw264crt9ftmjacm4vl&st=wnxm3fau&dl=0 "
    ]
   },
   {
